--- a/App-Movil/app/src/main/res/values/strings.xml
+++ b/App-Movil/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">ARAssistant</string>
+    <string name="app_name" translatable="false">ARAssistant</string>
+    <string name="login_button">Iniciar sesión</string>
+    <string name="email_hint">user@email.com</string>
+    <string name="password_hint">Contraseña</string>
+    <string name="register_link">Regístrate ahora</string>
+    <string name="forgotten_password_hint">¿Olvidó su contraseña?</string>
 </resources>
