--- a/App-Movil/app/src/main/res/values-en/strings.xml
+++ b/App-Movil/app/src/main/res/values-en/strings.xml
@@ -5,4 +5,7 @@
     <string name="password_hint">Password</string>
     <string name="register_link">Register now</string>
     <string name="forgotten_password_hint">Forgot your password?</string>
+    <string name="toast_login_bad_credentials">Incorrect username or password.</string>
+    <string name="toast_generic_error">An error ocurred</string>
+    <string name="toast_logout_success">Logged out</string>
 </resources>
