--- a/App-Movil/app/src/main/res/values-en/strings.xml
+++ b/App-Movil/app/src/main/res/values-en/strings.xml
@@ -8,4 +8,15 @@
     <string name="toast_login_bad_credentials">Incorrect username or password.</string>
     <string name="toast_generic_error">An error ocurred</string>
     <string name="toast_logout_success">Logged out</string>
+    <string name="toast_register_succeed">Registro completado con exito!</string>
+    <string name="label_create_account">Crear cuenta</string>
+    <string name="hint_name">Nombre</string>
+    <string name="hint_lastname">Apellidos</string>
+    <string name="hint_password">Contraseña</string>
+    <string name="hint_repeat_pass">Repetir contraseña</string>
+    <string name="error_empty_fields">Este campo no puede estar vacío</string>
+    <string name="error_min_length">Demasiado corto, mínimo 3 caracteres</string>
+    <string name="error_invalid_email">El formato del email es incorrecto</string>
+    <string name="error_pass_length">La contraseña debe tener al menos 6 caracteres</string>
+    <string name="error_pass_match">Las contraseñas no coinciden</string>
 </resources>
