--- a/App-Movil/app/src/main/res/values/strings.xml
+++ b/App-Movil/app/src/main/res/values/strings.xml
@@ -8,4 +8,16 @@
     <string name="toast_login_bad_credentials">Usuario o contraseña incorerectos</string>
     <string name="toast_generic_error">Se ha producido un error</string>
     <string name="toast_logout_success">Sesión cerrada</string>
+    <string name="toast_register_succeed">Register completed successfully!</string>
+    <string name="label_create_account">Create account</string>
+    <string name="hint_name">Name</string>
+    <string name="hint_lastname">Last name</string>
+    <string name="hint_email" translatable="false">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_repeat_pass">Repeat password</string>
+    <string name="error_empty_fields">This field can not be empty</string>
+    <string name="error_min_length">Too short, minimum 3 characters</string>
+    <string name="error_invalid_email">The email format is not valid</string>
+    <string name="error_pass_length">Password length minimum 6 characters</string>
+    <string name="error_pass_match">Password does not match</string>
 </resources>
