--- a/App-Movil/app/src/main/res/values/strings.xml
+++ b/App-Movil/app/src/main/res/values/strings.xml
@@ -21,4 +21,10 @@
     <string name="error_pass_length">La contraseña debe tener 6 caráctertes como mínimo</string>
     <string name="error_pass_match">Las contraseñas no coinciden</string>
     <string name="toast_reset_password_email_sent">Le hemos enviado un email para cambiar la contraseña</string>
+    <string name="label_task">Tareas</string>
+    <string name="label_reminder">Recordatorios</string>
+    <string name="label_home">Inicio</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
