--- a/App-Movil/app/src/main/res/values/strings.xml
+++ b/App-Movil/app/src/main/res/values/strings.xml
@@ -41,10 +41,12 @@
     <string name="toast_deleted_task">La tarea ha sido eliminada</string>
     <string name="profile_label">Perfil</string>
     <string name="settings_label">Ajustes</string>
-    <string name="link_ar_label">Conectar gafas</string>
+    <string name="link_ar_label">Vincular gafas</string>
     <string name="notification_label">Notificaciones</string>
     <string name="family_label">Configurar familia</string>
     <string name="account_label">Cuenta</string>
     <string name="sign_out_label">Cerrar sesión</string>
     <string name="del_acc_label">Borrar cuenta</string>
+    <string name="title_home" translatable="false">Home</string>
+    <string name="connect_des">Escanea el código con tus gafas</string>
 </resources>
