--- a/App-Movil/app/src/main/res/values-en/strings.xml
+++ b/App-Movil/app/src/main/res/values-en/strings.xml
@@ -50,4 +50,9 @@
     <string name="label_return">Return</string>
     <string name="label_category">Category</string>
     <string name="label_remember_me">Remember me</string>
+    <string name="select_image_label">Select image</string>
+    <string name="toast_image_upload_success">Image uploaded</string>
+    <string name="toast_image_upload_failure">Image not uploaded</string>
+    <string name="toast_image_too_big_error">Image must be smaller than 4096x4096px</string>
+    <string name="toast_image_size_too_big_error">Image size too big, max 1MB</string>
 </resources>
