--- a/App-Movil/app/src/main/res/values/strings.xml
+++ b/App-Movil/app/src/main/res/values/strings.xml
@@ -53,4 +53,9 @@
     <string name="label_return">Volver</string>
     <string name="label_category">Categoría</string>
     <string name="label_remember_me">Recordarme</string>
+    <string name="select_image_label">Seleccionar imagen</string>
+    <string name="toast_image_upload_success">Imagen subida correctamente</string>
+    <string name="toast_image_upload_failure">La imagen no se ha subido</string>
+    <string name="toast_image_too_big_error">La imagen debe ser menor de 4096x4096px</string>
+    <string name="toast_image_size_too_big_error">La imagen pesa más de 1MB</string>
 </resources>
