--- a/App-Movil/app/src/main/res/values/strings.xml
+++ b/App-Movil/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="dialog_password_recovery">Recuperar contraseña</string>
     <string name="dialog_recovery_pass_message">Escribe el correo con el que creaste la cuenta.</string>
     <string name="dialog_send">Enviar</string>
+    <string name="label_see_dialog">Ver</string>
 </resources>
