--- a/App-Movil/app/src/main/res/values/strings.xml
+++ b/App-Movil/app/src/main/res/values/strings.xml
@@ -71,4 +71,10 @@
     <string name="dialog_password_recovery">Recuperar contraseña</string>
     <string name="dialog_recovery_pass_message">Escribe el correo con el que creaste la cuenta.</string>
     <string name="dialog_send">Enviar</string>
+    <string name="label_see_reminder">Ver recordatorio</string>
+    <string name="dialog_delete_account_title">Borrar cuenta</string>
+    <string name="dialog_delete_account_message">¿Está seguro de que quiere borrar su cuenta? Volverá al apantalla de login.</string>
+    <string name="dialog_delete_button">Borrar</string>
+    <string name="toast_account_deleted">Cuenta borrada</string>
+    <string name="dialog_cancel">Cancelar</string>
 </resources>
