--- a/App-Movil/app/src/main/res/values-en/strings.xml
+++ b/App-Movil/app/src/main/res/values-en/strings.xml
@@ -50,7 +50,7 @@
     <string name="label_return">Return</string>
     <string name="label_category">Category</string>
     <string name="label_remember_me">Remember me</string>
-    <string name="select_image_label">Take photo</string>
+    <string name="select_image_label">Open Galery</string>
     <string name="toast_image_upload_success">Image uploaded</string>
     <string name="toast_image_upload_failure">Image not uploaded</string>
     <string name="toast_image_too_big_error">Image must be smaller than 4096x4096px</string>
@@ -74,4 +74,6 @@
     <string name="dialog_delete_button">Delete</string>
     <string name="toast_account_deleted">Account deleted</string>
     <string name="dialog_cancel">Cancel</string>
+    <string name="label_take_picture">Take picture</string>
+    <string name="label_record_video">Record video</string>
 </resources>
