--- a/App-Movil/app/src/main/res/values/strings.xml
+++ b/App-Movil/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="label_return">Volver</string>
     <string name="label_category">Categoría</string>
     <string name="label_remember_me">Recordarme</string>
-    <string name="select_image_label">Tomar foto</string>
+    <string name="select_image_label">Abrir Galería</string>
     <string name="toast_image_upload_success">Imagen subida correctamente</string>
     <string name="toast_image_upload_failure">La imagen no se ha subido</string>
     <string name="toast_image_too_big_error">La imagen debe ser menor de 4096x4096px</string>
@@ -77,4 +77,6 @@
     <string name="dialog_delete_button">Borrar</string>
     <string name="toast_account_deleted">Cuenta borrada</string>
     <string name="dialog_cancel">Cancelar</string>
+    <string name="label_take_picture">Tomar foto</string>
+    <string name="label_record_video">Grabar video</string>
 </resources>
