--- a/App-Movil/app/src/main/res/values/strings.xml
+++ b/App-Movil/app/src/main/res/values/strings.xml
@@ -79,4 +79,8 @@
     <string name="dialog_cancel">Cancelar</string>
     <string name="label_take_picture">Tomar foto</string>
     <string name="label_record_video">Grabar video</string>
+    <string name="label_no_media_selected">Sin archivos</string>
+    <string name="toast_video_upload_success">Video subido correctamente</string>
+    <string name="toast_video_upload_error">No se ha podido subir el video</string>
+    <string name="label_view_video">Ver vídeo</string>
 </resources>
